--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 * { 
     margin: 0;
     padding: 0;
@@ -123,8 +124,9 @@ body {
     background-image: url('assets/icons/img-nike-snake.png');
     height: 90vh;
     width: 100%;
+    min-width: fit-content;
     background-size: cover;
-    background-position: top 70% right 0;
+    background-position: 0;
     padding: 0 80px;
     display: flex;
     flex-direction: column;
@@ -266,6 +268,15 @@ body {
     box-shadow: 10px 10px 54px rgba(28, 28, 32, 0.08);
 }
 
+#product1 h2 {
+    font-size: 30px;
+    padding-bottom: 15px;
+}
+
+#product1 p {
+    font-size: 18px;
+}
+
 .product .img-object {
     width: 100%;
     max-width: 350px;
@@ -304,18 +315,21 @@ body {
     align-items: center;
     text-align: center;
     background-image: url(assets/icons/nike-air-max-98-la-mezcla-nyc.jpg);
-    background-position: top 50% right 0;
+    margin: 0;
     background-size: contain;
     height: 35vh;
     width: 100%;
-    font-weight: 900;
+    min-width: 800px;
+    font-weight: 900; 
 }
 
 #content {
     padding: 20px;
     align-items: center;
+    text-align: center;
     justify-content: center;
     margin-bottom: 15px;
+    margin: 0 ;
 }
 
 #content h2 {
@@ -323,6 +337,8 @@ body {
     font-style: italic;
     text-shadow: 15px 15px 32px black;
     color: white;
+
+    width: 800px;
 }
 
 #banner button {
@@ -332,7 +348,7 @@ body {
     font: 800;
     border: 0;
     border-radius: 9999px;
-    width: 10%;
+    width: 200px;
     font-size: 18px;
     cursor: pointer;
     transition: 0.3s ease;
@@ -343,7 +359,57 @@ body {
     color: black;
 } 
 
+#sm-banner {
+    width: 100%;
+}
 
+.content-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0 100px;
+}
+
+#sm-banner #more-about {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 30px;
+}
+
+.banner-box {
+    width: 550px;
+    height: 800px;
+    padding: 20px 20px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 0.4s ease;
+    position: relative;
+}
+
+.banner-box img {
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
+    max-height: 800px;
+}
+
+.banner-box:hover {
+    box-shadow: 10px 10px 54px rgba(28, 28, 32, 0.1);
+    transform: translateY(-5px);
+} 
+
+.banner-box h2 {
+    position: absolute;
+    width: 200px;
+    bottom: 15px;
+    left: 15px;
+    text-align: start;
+    margin: 0 0 30px 30px;
+    padding: 20px;
+    background-color: #e0462b;
+}
 
 
 /*Home Page*/
