--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     padding-top: 15px;
+    margin-bottom: 100px;
 }
 
 .product .cart {
@@ -334,7 +335,7 @@ body {
     font-weight: 900; 
 }
 
-#content {
+#banner #content {
     padding: 20px;
     align-items: center;
     text-align: center;
@@ -343,7 +344,7 @@ body {
     margin: 0 ;
 }
 
-#content h2 {
+#banner #content h2 {
     font-size: 150px;
     font-style: italic;
     text-shadow: 15px 15px 32px black;
@@ -373,17 +374,17 @@ body {
     width: 100%;
 }
 
-.content-box {
+#sm-banner .content-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 0 100px;
+    margin: 0 100px 140px 100px;
 }
 
 #sm-banner #more-about {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 50px;
     font-size: 30px;
 }
@@ -520,6 +521,25 @@ body {
     font-variant: small-caps;
 }
 
+#shop-top .start-banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url(assets/icons/NIKE87.jpg);
+    background-position: 0;
+    margin: 0;
+    background-size: contain;
+    height: 35vh;
+    width: 100%;
+    min-width: 800px;
+    font-weight: 900; 
+    font-size: 120px;
+    color: white;
+    font-variant: small-caps;
+}
+
 .start-banner h2 {
     font-weight: 900; 
     font-size: 60px;
@@ -561,8 +581,100 @@ body {
     font-weight: 100;
 }
 
-
 /*Blog Page*/
+
+/*About Page*/
+
+#history .history-content {
+    display: flex;
+    flex-direction: row;
+    text-wrap: wrap;
+    justify-content: space-between;
+    padding: 50px;
+}
+
+#history .history-content h4 {
+    padding: 0 50px 0 0;
+    font-size: 20px;
+}
+
+/**/
+
+/*Single Product*/
+#prodetails {
+    display: flex;    
+    margin-top: 20px;
+}
+
+#prodetails .single-pro-image {
+    width: 40%;
+    margin-right: 50px;
+}
+
+#prodetails .single-pro-details {
+    width: 50%;
+    padding-top: 30px;
+}
+
+#prodetails .single-pro-details h4 {
+    padding: 40px 0 20px 0;
+}
+
+#prodetails .single-pro-details h2 {
+    font-size: 26px;
+}
+
+#prodetails .single-pro-details select {
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input { 
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+
+
+/*Single Product*/
+
+/*Media Queries*/
+
+@media(max-width: 799px) {
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+
+    #feature {
+        justify-content: center;
+    }
+
+    #feature .fe-card {
+        margin: 15px;
+    }
+
+    #banner {
+        height: 20vh;
+    }
+
+    #banner #content h2{
+        font-size: 90px;
+    }
+
+    #banner button{
+        height: 40px;
+        width: 120px;  
+    }
+  
+}    
+
+/*Media Queries*/
 
 
 
