--- a/style.css
+++ b/style.css
@@ -16,6 +16,28 @@ body {
     padding: 40px 80px;
 }
 
+.botao {
+    font-size: 18px;
+    font-weight: 400;
+    background-color: #e0462b;
+    border: 0;
+    border-radius: 9999px;
+    height: 100%;
+    max-height: 45px;
+    width: 100%;
+    max-width: 200px;
+    min-width: 100px;
+    color: #F7F7F7;
+    text-align: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.botao:hover {
+    background-color: #9e2a16;
+    transition: 0.4s ease;
+}
+
 /*Header*/
 
 #header {
@@ -172,26 +194,6 @@ body {
     border: solid 1px black;
     font-size: 18px;
  
-}
-
-#hero button {
-    font-size: 18px;
-    font-weight: 400;
-    background-color: #e0462b;
-    border: 0;
-    border-radius: 9999px;
-    height: 100%;
-    max-height: 40px;
-    width: 100%;
-    max-width: 200px;
-    color: #F7F7F7;
-    text-align: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-#hero button:hover {
-    background-color: #9e2a16;
 }
 
 #feature {
@@ -563,6 +565,184 @@ body {
 
 
 /*Blog Page*/
+
+/*Single Product*/
+#prodetails {
+    display: flex;    
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+#prodetails .single-pro-image {
+    width: 40%;
+    margin-right: 50px;
+}
+
+#prodetails .single-pro-details {
+    width: 50%;
+    padding-top: 30px;
+}
+
+#prodetails .single-pro-details h6 {
+    font-size: 20px;
+    font-weight: 200;
+}
+
+#prodetails .single-pro-details h4 {
+    padding: 40px 0 20px 0;
+    font-size: 40px;
+}
+
+#prodetails .single-pro-details h2 {
+    font-size: 25px;
+    padding-bottom: 15px;
+}
+
+#prodetails #sel-input-row {
+    display: flex;
+    flex-direction: row;
+}
+
+#prodetails .single-pro-details select {
+    padding: 5px 10px;
+    margin: 0 18px 15px 0;
+    font-size: 18px;
+}
+
+#prodetails .single-pro-details button {
+    margin-bottom: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#prodetails .single-pro-details input { 
+    width: 50px;
+    height: 30px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin: 0 10px 10px 0;
+}
+
+#prodetails .single-pro-details span {
+    font-size: 18px;
+    text-align: center;
+    line-height: 25px;
+
+}
+
+/*About Page*/
+
+#history h2 {
+    text-align: center;
+}
+
+#history .history-content {
+    display: flex;
+    flex-direction: row;
+    text-wrap: wrap;
+    justify-content: space-between;
+    padding: 50px;
+    height: 50vh;
+    align-items: center;
+}
+
+#history h2 {
+    padding-top: 80px;
+    font-size: 40px;
+    background-color: #1A1A1A;
+    color: white;
+    width: 100%;
+    height: 200px;
+}
+
+#history .history-content h4 {
+    padding: 0 50px 0 0;
+    font-size: 23px;
+    line-height: 40px;
+    font-weight: 400;
+}
+
+
+/**/
+
+
+
+/*Single Product*/
+
+/*Contact Page*/
+
+#contact-details {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+#contact-details #details {
+    width: 40%;
+    padding-left: 170px;
+}
+
+#contact-details #details h2 {
+    font-size: 30px;
+    line-height: 35px;
+    padding-bottom: 15px;
+}
+
+#contact-details #details h3 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 35px;
+    padding-bottom: 10px;
+}
+
+#contact-details #details li {
+    list-style: none;
+    font-size: 19px;
+    line-height: 35px;
+    font-weight: 100;
+}
+
+#contact-details #google-map {
+    padding: 100px 170px 100px 0;
+}
+
+/*Contact Page*/
+
+/*Media Queries*/
+
+@media(max-width: 799px) {
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+
+    #feature {
+        justify-content: center;
+    }
+
+    #feature .fe-card {
+        margin: 15px;
+    }
+
+    #banner {
+        height: 20vh;
+    }
+
+    #banner #content h2{
+        font-size: 90px;
+    }
+
+    #banner button{
+        height: 40px;
+        width: 120px;  
+    }
+  
+}    
+
+/*Media Queries*/
 
 
 
