--- a/style.css
+++ b/style.css
@@ -592,7 +592,10 @@ body {
     flex-direction: row;
     text-wrap: wrap;
     justify-content: space-between;
-    padding: 50px;
+}
+
+#history .history-content h2 {
+    
 }
 
 #history .history-content h4 {
@@ -635,6 +638,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
 
 #prodetails .single-pro-details h4 {
     padding: 40px 0 20px 0;
@@ -667,17 +671,13 @@ body {
 
 /*About Page*/
 
-#history h2 {
-    text-align: center;
-}
-
 #history .history-content {
     display: flex;
     flex-direction: row;
     text-wrap: wrap;
     justify-content: space-between;
     padding: 50px;
-    height: 50vh;
+    height: 60vh;
     align-items: center;
 }
 
@@ -688,6 +688,7 @@ body {
     color: white;
     width: 100%;
     height: 200px;
+    text-align: center;
 }
 
 #history .history-content h4 {
@@ -742,6 +743,121 @@ body {
 }
 
 /*Contact Page*/
+
+/*Cart Page*/
+
+#cart {
+    margin: 100px;
+}
+
+#cart table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    white-space: nowrap;
+}
+
+#cart table img {
+    width: 70px;
+}
+
+#cart table thead {
+    border: solid #e0462b 1px;
+    border-left: none;
+    border-right: none;
+}
+
+#cart table thead td {
+    font-size: 19px;
+    padding: 18px 0;
+    font-weight: 700;
+}
+
+#cart table tbody tr td {
+    padding-top: 15px;
+}
+
+#cart table tbody td {
+    font-size: 18px;
+}
+
+#cart table input {
+    width: 80px;
+    padding: 10px 5px 10px 15px;
+} 
+
+#cart-add {
+    margin: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#coupon {
+    width: 50%;
+    margin-bottom: 30px;
+}
+
+#coupon h3 {
+    padding-bottom: 15px;
+}
+
+#coupon input {
+    padding: 10px 20px;
+    outline: none;
+    width: 60%;
+    height: 100%;
+    margin-right: 10px;
+    border: 1px solid #e0462b;
+    font-size: 18px;
+}
+
+#coupon h3 {
+    font-size: 20px;
+}
+
+#coupon #cupom-field {
+    display: flex;
+    height: 40px;
+}
+
+#coupon #cupom-field button {
+    width: 50px;
+}
+
+#subtotal {
+    width: 50%;
+    margin-bottom: 30px;
+    border: 1px solid #e0462b;
+    padding: 30px;
+}
+
+#subtotal table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#subtotal h3{
+    font-size: 20px;
+    padding-bottom: 10px;
+} 
+
+#subtotal button {
+    width: 30%;
+    min-width: 200px;
+}
+
+#subtotal table td {
+    width: 50%;
+    border: 1px solid #e2e9e1;
+    padding: 10px;
+    font-size: 18px;
+}
+
+
+
+/*Cart Page*/
 
 /*Media Queries*/
 
