--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ body {
 #header .cart-icon {
     width: 20px;
     height: 20px;
+    &:hover {
+        filter: brightness(0) saturate(100%) invert(36%) sepia(97%) saturate(3755%) hue-rotate(350deg) brightness(95%) contrast(84%);    
+
+    }
+
 }
 
 #navbar {
@@ -91,7 +96,7 @@ body {
 
 #navbar li a:hover {
     color: #e0462b;
-    transition: all 0.3s ease;    
+    transition: all 0.3s ease;
 }
 
 #navbar li a:hover,
